fix: group collapsing

--- a/src/Console/Logger.scss
+++ b/src/Console/Logger.scss
@@ -10,7 +10,7 @@
         height: 100%;
         font-size: $font-size;
         padding-top: 1px;
-        .log {
+        .log-container {
           box-sizing: content-box;
           min-height: 26px;
         }
